# crs_application_sizen

./: README.md  crs.sh  crs_app.workspace  token.txt  更换机器人.txt
src/: .rosinstall  resources.qrc
src/Universal_Robots_ROS_Driver/ur_dashboard_msgs/: CMakeLists.txt  package.xml
src/cartesian_trajectory_msgs/install/: local_setup.sh  setup.sh
src/cartesian_trajectory_msgs/install/cartesian_trajectory_msgs/share/cartesian_trajectory_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/cartesian_trajectory_msgs/log/: latest_build
src/collaborative-robotic-sanding/abb_irb6700_support/: CMakeLists.txt  package.xml
src/collaborative-robotic-sanding/abb_irb6700_support/meshes/irb6700/collision/: ef.stl
src/collaborative-robotic-sanding/abb_irb6700_support/urdf/: irb6700_200_260.srdf  irb6700_200_260.urdf  irb6700_200_260_macro.xacro
src/collaborative-robotic-sanding/abb_resources/: CMakeLists.txt  package.xml
src/collaborative-robotic-sanding/crs_application/: package.xml
src/collaborative-robotic-sanding/crs_application/config/main/: crs.yaml
src/collaborative-robotic-sanding/crs_application/config/main/motion_planning/: fanuc_MP_config (copy).yaml
src/collaborative-robotic-sanding/crs_application/include/crs_application/common/: simulation_object_spawner.h
src/collaborative-robotic-sanding/crs_application/include/crs_application/task_managers/: generatels.h  part_registration_manager.h
src/collaborative-robotic-sanding/crs_application/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/collaborative-robotic-sanding/crs_application/launch/: abb.launch.xml  crs.launch.xml  fanuc.launch (copy).xml  fanuc.launch.xml  fanuc.m20ia.launch.xml  fanuc.m710ic.launch.xml  load_abb_irb6700.launch.xml  load_fanuc_m20ia.launch.xml  load_fanuc_m710ic.launch.xml  load_fanuc_robot_model.launch.xml  load_preview_robot_model.launch.xml  load_robot_model.launch.xml  urdftorviz.launch.xml
src/collaborative-robotic-sanding/crs_application/log/: latest_build
src/collaborative-robotic-sanding/crs_application/resources/: crs_fanuc.rviz  crs_process.scxml  fanuc.rviz  urdftorviz.rviz
src/collaborative-robotic-sanding/crs_application/src/: crs_application.cpp
src/collaborative-robotic-sanding/crs_application/src/common/: simulation_object_spawner.cpp
src/collaborative-robotic-sanding/crs_application/src/task_managers/: generatepath.cpp  motion_planning_manager.cpp  part_registration_manager.cpp  scan_acquisition_manager.cpp
src/collaborative-robotic-sanding/crs_gui/: CMakeLists.txt  crsres.qrc
src/collaborative-robotic-sanding/crs_gui/src/widgets/: crs_application_widget.cpp  part_selection_widget.cpp  state_machine_interface_widget.cpp
src/collaborative-robotic-sanding/crs_gui/ui/: crs_application (copy).ui  part_selection.ui  polygon_area_selection_widget.ui  state_machine_interface.ui
src/collaborative-robotic-sanding/crs_motion_planning/: CMakeLists.txt
src/collaborative-robotic-sanding/crs_motion_planning/include/crs_motion_planning/: generatecartesian.h  path_planning_utils.h
src/collaborative-robotic-sanding/crs_motion_planning/src/: motion_planning_server.cpp  path_planning_utils.cpp  path_processing_utils.cpp  process_planner_test.cpp
src/collaborative-robotic-sanding/crs_msgs/install/: local_setup.sh  setup.sh
src/collaborative-robotic-sanding/crs_msgs/log/: latest_build
src/collaborative-robotic-sanding/crs_perception/src/nodes/: localize_to_part.cpp
src/collaborative-robotic-sanding/crs_support/launch/: abb_irb6700_environment_launch.launch.py  fanuc_environment_launch.launch.py  fanuc_m20ia_environment_launch.launch.py  fanuc_m710ic_environment_launch.launch.py
src/collaborative-robotic-sanding/crs_support/urdf/: crs.gv  crs.urdf  crs.urdf.xacro
src/collaborative-robotic-sanding/fanuc_m20ia_support/: CMakeLists.txt  package.xml
src/collaborative-robotic-sanding/fanuc_m20ia_support/config/: joint_names_m20ia.yaml
src/collaborative-robotic-sanding/fanuc_m20ia_support/urdf/: m20ia.urdf  m20ia_macro.xacro
src/collaborative-robotic-sanding/fanuc_m710ic_support/: CMakeLists.txt  package.xml
src/collaborative-robotic-sanding/fanuc_m710ic_support/urdf/: m710ic.urdf  m710ic50_macro.xacro
src/collaborative-robotic-sanding/fanuc_r2000ic_support/: CMakeLists.txt  package.xml
src/collaborative-robotic-sanding/fanuc_r2000ic_support/.svn/: wc.db
src/collaborative-robotic-sanding/fanuc_r2000ic_support/launch/: robot_interface_streaming_r2000ic125l.launch  robot_state_visualize_r2000ic125l.launch  robot_state_visualize_r2000ic165f.launch  test_r2000ic125l.launch
src/collaborative-robotic-sanding/fanuc_r2000ic_support/test/: roslaunch_test_r2000ic125l.xml
src/collaborative-robotic-sanding/fanuc_r2000ic_support/urdf/: crs.gv  fanuc_r2000ic165f.srdf  frames.gv  r2000ic125l.xacro  r2000ic165f.urdf  r2000ic165f.urdf.xml  r2000ic165f.xacro  r2000ic165f_bak.urdf  r2000ic165f_macro.xacro  r2000ic165f_macro_true.xacro
src/collaborative-robotic-sanding/fanuc_resources/: CMakeLists.txt  package.xml
src/ros_scxml/scxml_core/src/: state_machine.cpp
src/tesseract_ext/: .travis.yml  README.md
src/tesseract_ext/bullet3/: CMakeLists.txt
src/tesseract_ext/eigen/: CMakeLists.txt  package.xml
src/tesseract_ext/gtest/: CMakeLists.txt
src/tesseract_ext/orocos_kdl/: CMakeLists.txt  package.xml
src/tesseract_ext/swig/: CMakeLists.txt  package.xml
src/tesseract_ros2/tesseract_ros/tesseract_monitoring/src/: environment_monitor.cpp
src/ur_ikfast_kinematics/: CMakeLists (copy).txt  CMakeLists.txt  package.xml
src/ur_ikfast_kinematics/cmake/: ur_ikfast_kinematics-config.cmake.in
src/ur_ikfast_kinematics/include/ur_ikfast_kinematics/: descartes_ikfast_ur10e.h
src/ur_ikfast_kinematics/src/: abb_ikfast_irb6700.cpp  abb_irb6700_manipulator_ikfast_solver.cpp  descartes_ikfast_ur10e.cpp  fanuc_ikfast_m20ia.cpp  fanuc_ikfast_m710ic50.cpp  fanuc_ikfast_r2000ic.cpp  fanuc_m710ic50_manipulator_ikfast_solver.cpp  ur10e_ikfast_solver.cpp
(+100 files in other folders)
