<?xml version="1.0"?>
<package format="2">
  <name>orocos_kdl</name>
  <version>0.1.0</version>
  <description>orocos_kdl Package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Unknown</license>

  <depend>eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
